--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.0",
-        "phpoffice/phpexcel": "^1.8",
-      "ext-zip": "*"
+        "phpoffice/phpexcel": "^1.8"
     }
 }
