--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": ">=5.4.0",
         "topthink/framework": "5.0.*",
         "phpoffice/phpspreadsheet": "^1.12",
-        "gregwar/captcha": "^1.1"
+        "gregwar/captcha": "^1.1",
+        "phpmailer/phpmailer": "^6.2"
     },
     "autoload": {
         "psr-4": {
