--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "topthink/framework": "5.0.*",
         "phpoffice/phpspreadsheet": "^1.12",
         "gregwar/captcha": "^1.1",
-        "phpmailer/phpmailer": "^6.2"
+        "phpmailer/phpmailer": "^6.2",
+      "ext-pdo": "*",
+      "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
