feat: store session in redis

--- a/.env
+++ b/.env
@@ -13,6 +13,11 @@ database = justoj
 username = root
 password = 123456
 
+[session]
+type     = 'redis'
+host     = '172.17.0.1'
+port     = 6379
+
 [log]
 type = File
 
